# CodeInfinity

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  schema.sql
backend/app/: auth.py  config.py  constants.py  db.py  dependencies.py  judge0.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  attempts.py  auth.py  exams.py  questions.py  submissions.py
frontend/: index.html  middleware.ts  package-lock.json  package.json  supabase-test.js  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthCard.tsx  ExamCard.tsx  FeaturePanel.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AdminDashboard.tsx  CandidateExams.tsx  ExamBuilder.tsx  ExamRoom.tsx  History.tsx  LandingPage.tsx  Login.tsx  QuestionBuilder.tsx  Submissions.tsx
frontend/utils/supabase/: client.ts  server.ts
