[project]
name = "code-assessment-platform"
version = "0.1.0"
description = "Coding assessment platform backend"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["fastapi","judge0","supabase","assessment"]
license = "MIT"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "python-jose[cryptography]>=3.0.0",
    "passlib[bcrypt]>=1.7.5",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.27.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0"
]
[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
[build-system]
requires = ["setuptools>=65.0.0","wheel"]
build-backend = "setuptools.build_meta"
